Personal Info Added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
 </head>
 
 <body>
-  A webpage
+  <h1>Noah Yusen's Webpage</h1>
+  <p>I'm excited to explore web development in cs52 this term!</p>
+  <h3>About Me</h3>
+  <p>Name: Noah Yusen <br />
+    Year: '23 <br />
+    Major: Computer Science <br />
+    Hometown: Scarsdale, New York</p>
+  <h3>My Hobbies</h3>
+  <p>Coding<br />
+    Baseball<br />
+    Cooking<br />
+    Films</p>
+  <h3>Current TV Shows</h3>
+  <p>Succession <br />
+    The Last of Us
+  </p>
+
 </body>
 
 </html>
