Added stronger + leo gif

--- a/index.html
+++ b/index.html
@@ -8,20 +8,27 @@
 <body>
   <h1>Noah Yusen's Webpage</h1>
   <p>I'm excited to explore web development in cs52 this term!</p>
-  <h3>About Me</h3>
-  <p>Name: Noah Yusen <br />
-    Year: '23 <br />
-    Major: Computer Science <br />
-    Hometown: Scarsdale, New York</p>
-  <h3>My Hobbies</h3>
-  <p>Coding<br />
-    Baseball<br />
-    Cooking<br />
-    Films</p>
-  <h3>Current TV Shows</h3>
-  <p>Succession <br />
-    The Last of Us
-  </p>
+  <h2>About Me</h2>
+  <ul>
+    <li><strong>Name:</strong> Noah Yusen</li>
+    <li><strong>Year:</strong> '23</li>
+    <li><strong>Major:</strong> Computer Science</li>
+    <li><strong>Hometown:</strong> Scarsdale, New York</li>
+  </ul>
+  <h2>My Hobbies</h2>
+  <ul>
+    <li>Coding</li>
+    <li>Baseball</li>
+    <li>Cooking</li>
+    <li>Films</li>
+  </ul>
+  <h2>Current TV Shows</h2>
+  <ul>
+    <li>Succession</li>
+    <li>The Last of Us</li>
+  </ul>
+
+  <image src="https://media.tenor.com/kMSOGVd0rNMAAAAC/boss-gatsby.gif" />
 
 </body>
 
